--- a/ios/turtle/Base.lproj/Main.storyboard
+++ b/ios/turtle/Base.lproj/Main.storyboard
@@ -19,17 +19,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i7D-FP-spb">
-                                <rect key="frame" x="20" y="20" width="560" height="580"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="i7D-FP-spb" secondAttribute="trailing" id="Bw7-et-xKs"/>
                             <constraint firstItem="i7D-FP-spb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="EFz-xF-4sL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="i7D-FP-spb" secondAttribute="trailing" id="gZW-rL-vg4"/>
                             <constraint firstItem="i7D-FP-spb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="n7y-me-LBe"/>
+                            <constraint firstItem="i7D-FP-spb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ugZ-5E-Nb7"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="i7D-FP-spb" secondAttribute="bottom" id="wn1-Mt-n4y"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="gZW-rL-vg4"/>
+                                <exclude reference="n7y-me-LBe"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="webView" destination="i7D-FP-spb" id="0O5-Ig-xld"/>
